<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>st.foglo</groupId>
  <artifactId>gerke_decoder</artifactId>
  <packaging>jar</packaging>
  <version>2.0</version>
  <name>st.foglo.gerke_decoder</name>
  <url>http://elsewhere.se</url>
  <dependencies>
    <dependency>
      <groupId>uk.me.berndporr</groupId>
      <artifactId>iirj</artifactId>
      <version>1.1</version>
    </dependency>
    <!-- <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>3.8.1</version>
         <scope>test</scope>
         </dependency> -->
  </dependencies>
  <properties> 
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
</project>
